  - re-implemented the dropping of variables if they're globally defined in
    rk.JS.doc()
  - private function p2s.checkModifiers() (called by plugin2script()) didn't
    detect *.not modifiers correctly
  - plugin2script() does now output numeric values when mandatory;
    internally this is defined in the FONA list
  - rk.XML.about() now prints dates correctly
changed:
  - internal function get.IDs() now uses new internal function
    filter.relevant.tags()
  - function rk.JS.scan() now has a new mode switch and supports scanning for
    <preview /> nodes
  - rk.JS.scan() can now also check if a variable is actually being used in the
    script body (if given via the new script argument), and if not omit it from
    its result; this is the new default, but can be turned off by setting the
    new argument unused.vars=TRUE in rk.plugin.component() and rk.plugin.skeleton()
  - handling of previews was changed; using "doPrintout" is deprecated now,
    but still works. most scripts should still do without changes, allthough
    the JS code looks different now
  - improved output of rk.JS.doc()
  - improved the handling of <frame> nodes in JS code: previously id() just
    returned the camelCode id of frames, you had to manually define an object
    outside rk.paste.JS() via rk.JS.vars(<frame object>, modifiers="checked").
    the default is now to add the checked modifier, since using frames in JS
    is most likely useless otherwise. i.e., you now need to manually call via
    rk.JS.vars(<frame object>) with no modifiers if you happen to need the
    frame's ID for whatever reason
  - adjusted plugin2script() to the new rk.XML.preview() parameters (see
    "added")
  - rk.XML.embed() now also accepts objects of class rk.plug.comp as
    components
  - rk.plotOptions() gained new argument namespace to work well with the changed
    approach of rk.XML.embed()
  - rk.XML.connect() now allows objects of class rk.plug.comp to be used as clients