@@ -16,6 +16,8 @@ fixed:
   - plugin2script() does now output numeric values when mandatory;
     internally this is defined in the FONA list
   - rk.XML.about() now prints dates correctly
+  - rk.XML.vars() now knows type "numeric" instead of "number"
+  - rk.JS.header() doesn't fail any longer if ".add" vectors have no names
 changed:
   - internal function get.IDs() now uses new internal function
     filter.relevant.tags()
